--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,10 @@
 <% provide(:title, 'About Us') %>
-
-<h1>About Us</h1>
-<p>
-  The <a href="http://railstutorial.org/">This is About Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
-</p>
+<div class="full-width">
+  <h1>About Us</h1>
+  <p>
+    The <a href="http://railstutorial.org/">This is About Ruby on Rails Tutorial</a>
+    is a project to make a book and screencasts to teach web development
+    with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
+    is the sample application for the tutorial.
+  </p>
+</div>
