--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Help') %>
-
+<div class="full-width">
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
@@ -7,4 +7,5 @@
   To get help on this sample app, see the
   <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
+</div>
 
