--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
 <% provide(:title, 'Sign up') %>
-
 <div class="content">
   <div class="full-width">
-    <h1>Sign up</h1>
+    <h1>Sign up <%= has_error(@user) %></h1>
     <div class="row">
       <div class="span6 offset3">
         <%= form_for(@user) do |f| %>
