--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,35 @@
-<div class="center hero-unit disabled-radius">
-  <div class="content">
-    <h1>Welcome to the Sample App</h1>
-
-    <h2>
-      This is the Home page for the
-      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-      sample application.
-    </h2>
-
-    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+<% if signed_in? %>
+  <div class="row">
+    <div class="full-width">
+      <aside class="span4">
+        <section>
+          <%= render 'shared/user_info' %>
+        </section>
+        <section>
+          <%= render 'shared/micropost_form' %>
+        </section>
+      </aside>
+      <aside class="span8">
+        <section>
+          <%= render 'shared/feed' %>
+        </section>
+      </aside>
+    </div>
   </div>
-</div>
+<% else %>
+  <div class="center hero-unit disabled-radius">
+    <div class="content">
+      <h1>Welcome to the Sample App</h1>
 
-<%= link_to image_tag("rails-logo.svg", alt: "Rails"), 'http://rubyonrails.org/' %>
+      <h2>
+        This is the Home page for the
+        <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+        sample application.
+      </h2>
+
+      <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+    </div>
+  </div>
+
+  <%= link_to image_tag("rails-logo.svg", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
