--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
   <div class="full-width">
     <h1>Sign up <%= has_error(@user) %></h1>
     <div class="row">
-      <div class="span6 offset3">
+      <div class="span6 offset-signin">
         <%= form_for(@user) do |f| %>
           <%= render 'fields', f: f %>
         <% end %>
